update testing